@@ -215,21 +215,21 @@
     // Most methods try to follow ES5 spec but may differ from
     // the documented method.length value or allow null callbacks.
     var Array, Boolean, Date, Function, Number, Object, RegExp, String, from, isFunction,
+     sandbox              = createSandbox(),
      filterCallback       = function(value) { return value != null; },
      glFunction           = global.Function,
-     reStrict             = /^(?:\/\*+[\w|\W]*?\*\/|\/\/.*?[\n\r\u2028\u2029]|\s)*(["'])use strict\1/,
-     sandbox              = createSandbox(),
      isProtoMode          = MODE === PROTO_MODE,
-     isArrayChainable     = !isProtoMode && !(sandbox.Array().slice(0) instanceof global.Array),
-     isRegExpChainable    = !isProtoMode && !(sandbox.RegExp('') instanceof global.RegExp),
+     isArrayChainable     = sandbox.Array().constructor !== global.Array,
+     isRegExpChainable    = sandbox.RegExp('').constructor !== global.RegExp,
      arrPlugin            = isProtoMode && new sandbox.Array    || sandbox.Array.prototype,
      boolPlugin           = isProtoMode && new sandbox.Boolean  || sandbox.Boolean.prototype,
      datePlugin           = isProtoMode && new sandbox.Date     || sandbox.Date.prototype,
      funcPlugin           = isProtoMode && new sandbox.Function || sandbox.Function.prototype,
      numPlugin            = isProtoMode && new sandbox.Number   || sandbox.Number.prototype,
+     objPlugin            = isProtoMode && new sandbox.Object   || sandbox.Object.prototype,
      regPlugin            = isProtoMode && new sandbox.RegExp   || sandbox.RegExp.prototype,
      strPlugin            = isProtoMode && new sandbox.String   || sandbox.String.prototype,
-     objPlugin            = sandbox.Object.prototype,
+     reStrict             = /^(?:\/\*+[\w|\W]*?\*\/|\/\/.*?[\n\r\u2028\u2029]|\s)*(["'])use strict\1/,
      toString             = objPlugin.toString,
      __Array              = sandbox.Array,
      __Boolean            = sandbox.Boolean,
@@ -238,66 +238,72 @@
      __Number             = sandbox.Number,
      __Object             = sandbox.Object,
      __RegExp             = sandbox.RegExp,
-     __String             = sandbox.String;
-     __concat             = arrPlugin.concat,
-     __every              = arrPlugin.every,
-     __filter             = arrPlugin.filter,
-     __join               = arrPlugin.join,
-     __indexOf            = arrPlugin.indexOf,
-     __lastIndexOf        = arrPlugin.lastIndexOf,
-     __map                = arrPlugin.map,
-     __push               = arrPlugin.push,
-     __reverse            = arrPlugin.reverse,
-     __slice              = arrPlugin.slice,
-     __splice             = arrPlugin.splice,
-     __some               = arrPlugin.some,
-     __sort               = arrPlugin.sort,
-     __unshift            = arrPlugin.unshift,
-     __getDate            = datePlugin.getDate,
-     __getDay             = datePlugin.getDay,
-     __getFullYear        = datePlugin.getFullYear,
-     __getHours           = datePlugin.getHours,
-     __getMilliseconds    = datePlugin.getMilliseconds,
-     __getMinutes         = datePlugin.getMinutes,
-     __getMonth           = datePlugin.getMonth,
-     __getSeconds         = datePlugin.getSeconds,
-     __getTime            = datePlugin.getTime,
-     __getTimezoneOffset  = datePlugin.getTimezoneOffset,
-     __getUTCDate         = datePlugin.getUTCDate,
-     __getUTCDay          = datePlugin.getUTCDay,
-     __getUTCFullYear     = datePlugin.getUTCFullYear,
-     __getUTCHours        = datePlugin.getUTCHours,
-     __getUTCMilliseconds = datePlugin.getUTCMilliseconds,
-     __getUTCMinutes      = datePlugin.getUTCMinutes,
-     __getUTCMonth        = datePlugin.getUTCMonth,
-     __getUTCSeconds      = datePlugin.getUTCSeconds,
-     __getYear            = datePlugin.getYear,
-     __toISOString        = datePlugin.toISOString,
-     __toJSON             = datePlugin.toJSON,
-     __toExponential      = numPlugin.toExponential,
-     __toFixed            = numPlugin.toFixed,
-     __toPrecision        = numPlugin.toPrecision,
-     __exec               = regPlugin.exec,
-     __charAt             = strPlugin.charAt,
-     __charCodeAt         = strPlugin.charCodeAt,
-     __strConcat          = strPlugin.concat,
-     __strIndexOf         = strPlugin.indexOf,
-     __localeCompare      = strPlugin.localeCompare,
-     __match              = strPlugin.match,
-     __replace            = strPlugin.replace,
-     __search             = strPlugin.search,
-     __strSlice           = strPlugin.slice,
-     __substr             = strPlugin.substr,
-     __substring          = strPlugin.substring,
-     __toLowerCase        = strPlugin.toLowerCase,
-     __toLocaleLowerCase  = strPlugin.toLocaleLowerCase,
-     __toLocaleUpperCase  = strPlugin.toLocaleUpperCase,
-     __toUpperCase        = strPlugin.toUpperCase,
-     __trim               = strPlugin.trim,
-     __trimLeft           = strPlugin.trimLeft,
-     __trimRight          = strPlugin.trimRight,
-     __split              = ''.split,
-     __strLastIndexOf     = ''.lastIndexOf;
+     __String             = sandbox.String,
+     __concat             = arrPlugin.concat = arrPlugin.concat,
+     __every              = arrPlugin.every = arrPlugin.every,
+     __filter             = arrPlugin.filter = arrPlugin.filter,
+     __join               = arrPlugin.join = arrPlugin.join,
+     __indexOf            = arrPlugin.indexOf = arrPlugin.indexOf,
+     __lastIndexOf        = arrPlugin.lastIndexOf = arrPlugin.lastIndexOf,
+     __map                = arrPlugin.map = arrPlugin.map,
+     __push               = arrPlugin.push = arrPlugin.push,
+     __reverse            = arrPlugin.reverse = arrPlugin.reverse,
+     __slice              = arrPlugin.slice = arrPlugin.slice,
+     __splice             = arrPlugin.splice = arrPlugin.splice,
+     __some               = arrPlugin.some = arrPlugin.some,
+     __sort               = arrPlugin.sort = arrPlugin.sort,
+     __unshift            = arrPlugin.unshift = arrPlugin.unshift,
+     __getDate            = datePlugin.getDate = datePlugin.getDate,
+     __getDay             = datePlugin.getDay = datePlugin.getDay,
+     __getFullYear        = datePlugin.getFullYear = datePlugin.getFullYear,
+     __getHours           = datePlugin.getHours = datePlugin.getHours,
+     __getMilliseconds    = datePlugin.getMilliseconds = datePlugin.getMilliseconds,
+     __getMinutes         = datePlugin.getMinutes = datePlugin.getMinutes,
+     __getMonth           = datePlugin.getMonth = datePlugin.getMonth,
+     __getSeconds         = datePlugin.getSeconds = datePlugin.getSeconds,
+     __getTime            = datePlugin.getTime = datePlugin.getTime,
+     __getTimezoneOffset  = datePlugin.getTimezoneOffset = datePlugin.getTimezoneOffset,
+     __getUTCDate         = datePlugin.getUTCDate = datePlugin.getUTCDate,
+     __getUTCDay          = datePlugin.getUTCDay = datePlugin.getUTCDay,
+     __getUTCFullYear     = datePlugin.getUTCFullYear = datePlugin.getUTCFullYear,
+     __getUTCHours        = datePlugin.getUTCHours = datePlugin.getUTCHours,
+     __getUTCMilliseconds = datePlugin.getUTCMilliseconds = datePlugin.getUTCMilliseconds,
+     __getUTCMinutes      = datePlugin.getUTCMinutes = datePlugin.getUTCMinutes,
+     __getUTCMonth        = datePlugin.getUTCMonth = datePlugin.getUTCMonth,
+     __getUTCSeconds      = datePlugin.getUTCSeconds = datePlugin.getUTCSeconds,
+     __getYear            = datePlugin.getYear = datePlugin.getYear,
+     __toISOString        = datePlugin.toISOString = datePlugin.toISOString,
+     __toJSON             = datePlugin.toJSON = datePlugin.toJSON,
+     __toExponential      = numPlugin.toExponential = numPlugin.toExponential,
+     __toFixed            = numPlugin.toFixed = numPlugin.toFixed,
+     __toPrecision        = numPlugin.toPrecision = numPlugin.toPrecision,
+     __exec               = regPlugin.exec = regPlugin.exec,
+     __charAt             = strPlugin.charAt = strPlugin.charAt,
+     __charCodeAt         = strPlugin.charCodeAt = strPlugin.charCodeAt,
+     __strConcat          = strPlugin.concat = strPlugin.concat,
+     __strIndexOf         = strPlugin.indexOf = strPlugin.indexOf,
+     __localeCompare      = strPlugin.localeCompare = strPlugin.localeCompare,
+     __match              = strPlugin.match = strPlugin.match,
+     __replace            = strPlugin.replace = strPlugin.replace,
+     __search             = strPlugin.search = strPlugin.search,
+     __strSlice           = strPlugin.slice = strPlugin.slice,
+     __substr             = strPlugin.substr = strPlugin.substr,
+     __substring          = strPlugin.substring = strPlugin.substring,
+     __toLowerCase        = strPlugin.toLowerCase = strPlugin.toLowerCase,
+     __toLocaleLowerCase  = strPlugin.toLocaleLowerCase = strPlugin.toLocaleLowerCase,
+     __toLocaleUpperCase  = strPlugin.toLocaleUpperCase = strPlugin.toLocaleUpperCase,
+     __toUpperCase        = strPlugin.toUpperCase = strPlugin.toUpperCase,
+     __trim               = strPlugin.trim = strPlugin.trim,
+     __trimLeft           = strPlugin.trimLeft = strPlugin.trimLeft,
+     __trimRight          = strPlugin.trimRight = strPlugin.trimRight,
+     __split              = strPlugin.split = ''.split,
+     __strLastIndexOf     = strPlugin.lastIndexOf = ''.lastIndexOf;
+
+
+    // define as own methods of arrPlugin
+    arrPlugin.push  = arrPlugin.push;
+    arrPlugin.shift = arrPlugin.shift;
+    arrPlugin.sort  = arrPlugin.sort;
 
     instance || (instance = new Klass);
 
@@ -877,23 +883,11 @@
 
     /*-------------------------- MODIFY PROTOTYPES ---------------------------*/
 
-    if (isProtoMode) {
-      Object.prototype['__proto__'] = objPlugin;
-      arrPlugin['__proto__']  = __Array.prototype;
-      boolPlugin['__proto__'] = __Boolean.prototype;
-      datePlugin['__proto__'] = __Date.prototype;
-      funcPlugin['__proto__'] = __Function.prototype;
-      numPlugin['__proto__']  = __Number.prototype;
-      regPlugin['__proto__']  = __RegExp.prototype;
-      strPlugin['__proto__']  = __String.prototype;
-    } else{
-      Object.prototype = objPlugin;
-    }
-
     Array.prototype    = arrPlugin;
     Boolean.prototype  = boolPlugin;
     Date.prototype     = datePlugin;
     Function.prototype = funcPlugin;
+    Object.prototype   = objPlugin;
     Number.prototype   = numPlugin;
     RegExp.prototype   = regPlugin;
     String.prototype   = strPlugin;
